--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@fullpage/react-fullpage": "^0.1.19",
         "@mui/icons-material": "^5.8.4",
+        "@mui/lab": "^5.0.0-alpha.93",
         "@mui/material": "^5.2.4",
         "@types/faker": "^5.5.9",
         "@types/hls.js": "^1.0.0",
@@ -88,6 +89,7 @@
         "@babel/preset-typescript": "^7.15.0",
         "babel-jest": "^27.3.1",
         "babel-loader": "^8.2.3",
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.5.0",
         "eslint": "^8.1.0",
         "file-loader": "^6.2.0",
